day 10: add history on sqlite, add functionality of getting history